Save progress on nav - mobile collapse menu issues here

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -68,7 +68,8 @@ li.dataset-summary h4 {
 .site-banner {
   background-color: #fff;
   /* Light background */
-  padding: 15px 0;
+  padding-top: 15px;
+  padding-bottom: 5px;
   border-bottom: 3px solid #002569;
 }
 
@@ -414,7 +415,18 @@ form.input-group {
   background-color: #0073e0;
   border-color: #0073e0;
   color: white;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+}
+
+.navbar-default .navbar-nav>li>a {
+  color: #002569;
+  font-size: 1.7rem !important;
+  font-weight: 500;
+}
+
+.navbar-nav .nav-link {
+  font-size: 1.6rem;
+  font-weight: 500;
 }
 
 .modal-body {
